# aituber_python_programing_example

./: .gitignore  .pre-commit-config.yaml  README.md  aituber_system.py  openai_adapter.py  pyproject.toml  requirements-dev.txt  run.py  system_prompt.txt  voicevox_adapter.py  youtube_comment_adapter.py
scripts/: run.py
scripts/chores/: make_list_sound_device.py
src/aituber/: aituber_system.py  obs_adapter.py  openai_adapter.py  play_sound.py
